internal/kgateway/translator/gateway/testutils/inputs/invalid-filter-chains/gateway-empty-listenerset-tls-no-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: kgateway
  listeners: []
