internal/kgateway/translator/gateway/testutils/inputs/invalid-filter-chains/tls-listener-invalid-secret.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: kgateway
  listeners:
  - name: tls
    protocol: TLS
    port: 8443
    hostname: "example.com"
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: missing-tls-secret
